# Initial-view-selection-for-novel-view-rendering

./: CMakeLists.txt  Camera.cpp  Camera.h  CameraGenerator.cpp  CameraGenerator.h  CameraPlacementFinder.cpp  CameraPlacementFinder.h  DebugVisualize.cpp  DebugVisualize.h  ILPSolve.cpp  ILPSolve.h  ILPSolveMulti.cpp  ILPSolveMulti.h  Image.cpp  Image.h  InputHandler.cpp  InputHandler.h  Pixel.cpp  Pixel.h  PlacementFind1.cpp  PlacementFind1.h  README.md  RayCaster.cpp  RayCaster.h  SimpleRayCast.cpp  SimpleRayCast.h  Visualizer.cpp  Visualizer.h  main.cpp
input/: input_test.ssv  test_input0.ssv  test_input1.ssv  test_input2.ssv  test_input3.ssv
test/: CMakeLists.txt  CameraGeneratorTest.cpp  CameraGeneratorTest.h  CameraPlacementFinderTest.cpp  CameraPlacementFinderTest.h  ILPSolveTest.cpp  ILPSolveTest.h  PlacementFind1Test.cpp  PlacementFind1Test.h  SimpleRayCastTest.cpp  SimpleRayCastTest.h
